# repo2file

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
repo2file/: __init__.py  __main__.py
tests/: test_repo2file.py
